Added flow and snippets for donations

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,6 +75,7 @@
 
             <ImageView
                 android:id="@+id/infinite_gas_button"
+                android:src="@drawable/get_infinite_gas"
                 android:onClick="onInfiniteGasButtonClicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
