--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,8 +56,7 @@
                 android:src="@drawable/buy_gas"
                 android:onClick="onBuyGasButtonClicked"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp" />
+                android:layout_height="wrap_content" />
         </LinearLayout>
 
         <LinearLayout
@@ -77,6 +76,27 @@
                 android:id="@+id/infinite_gas_button"
                 android:src="@drawable/donate"
                 android:onClick="onDonateButtonClicked"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="20dp">
+            <ImageView
+                android:id="@+id/buy_oil"
+                android:src="@drawable/buy_oil"
+                android:onClick="onBuyOilButtonClicked"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp" />
+
+            <ImageView
+                android:id="@+id/buy_antifreeze"
+                android:src="@drawable/buy_antifreeze"
+                android:onClick="onBuyAntiFreezeButtonClicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
