--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingEnd="24dp"
     android:paddingStart="24dp"
+    android:paddingEnd="24dp"
     >
 
   <LinearLayout
@@ -65,11 +65,11 @@
         android:fillViewport="true"
         >
       <LinearLayout
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:orientation="vertical"
-          android:gravity="center"
           android:id="@+id/screen_main"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:gravity="center"
+          android:orientation="vertical"
           >
 
         <LinearLayout
@@ -81,7 +81,7 @@
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_marginRight="20dp"
+              android:layout_marginEnd="20dp"
               android:onClick="onDriveButtonClicked"
               android:src="@drawable/drive"
               />
@@ -104,7 +104,7 @@
               android:id="@+id/upgrade_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_marginRight="20dp"
+              android:layout_marginEnd="20dp"
               android:onClick="onUpgradeAppButtonClicked"
               android:src="@drawable/upgrade_app"
               />
@@ -128,7 +128,7 @@
               android:id="@+id/buy_oil"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_marginRight="20dp"
+              android:layout_marginEnd="20dp"
               android:onClick="onBuyOilButtonClicked"
               android:src="@drawable/buy_oil"
               />
@@ -139,6 +139,28 @@
               android:layout_height="wrap_content"
               android:onClick="onBuyAntiFreezeButtonClicked"
               android:src="@drawable/buy_antifreeze"
+              />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal"
+            >
+          <ImageView
+              android:id="@+id/buy_gas_reserve"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginEnd="20dp"
+              android:onClick="onBuyGasReserveButtonClicked"
+              android:src="@drawable/buy_gas"
+              />
+          <ImageView
+              android:id="@+id/buy_oil_reserve"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:onClick="onBuyOilReserveButtonClicked"
+              android:src="@drawable/buy_oil"
               />
         </LinearLayout>
       </LinearLayout>
