--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -32,14 +32,29 @@
         android:src="@drawable/free"
         />
 
-    <ImageView
-        android:id="@+id/gas_gauge"
+    <LinearLayout
+        android:id="@+id/gas_gauge_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:contentDescription="@string/content_desc_gas_gauge_indicator"
-        android:src="@drawable/gas4"
-        />
+        android:orientation="horizontal"
+        >
+      <ImageView
+          android:id="@+id/gas_gauge"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="40dp"
+          android:contentDescription="@string/content_desc_gas_gauge_indicator"
+          android:src="@drawable/gas4"
+          />
+      <ImageView
+          android:id="@+id/subscription_image"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="20dp"
+          android:src="@drawable/subscriptions_icon"
+          android:visibility="gone"
+          />
+    </LinearLayout>
   </LinearLayout>
 
   <LinearLayout
