--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,15 +42,28 @@
           android:src="@drawable/free"
           />
 
-      <ImageView
-          android:id="@+id/gas_gauge"
+      <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_marginBottom="40dp"
-          android:contentDescription="@string/content_desc_gas_gauge_indicator"
-          android:src="@drawable/gas4"
-          />
-
+          android:orientation="horizontal"
+          >
+        <ImageView
+            android:id="@+id/gas_gauge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
+            android:contentDescription="@string/content_desc_gas_gauge_indicator"
+            android:src="@drawable/gas4"
+            />
+        <ImageView
+            android:id="@+id/subscription_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:src="@drawable/subscriptions_icon"
+            android:visibility="gone"
+            />
+      </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
