--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -94,6 +94,7 @@
             android:orientation="horizontal"
             >
           <ImageView
+              android:id="@+id/drive"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginEnd="20dp"
@@ -102,6 +103,7 @@
               />
 
           <ImageView
+              android:id="@+id/buy_gas"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:onClick="onBuyGasButtonClicked"
