--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,7 @@
           android:orientation="horizontal"
           >
         <ImageView
+            android:id="@+id/drive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
@@ -79,6 +80,7 @@
             />
 
         <ImageView
+            android:id="@+id/buy_gas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onBuyGasButtonClicked"
